Implemented findCell method in Geometry class.
Tested a few simple cases for sample geometry 5 file which worked. This
method assumes that the origin for each universe is at (0,0) and that
the origin for each lattice is at (-width/2, -height/2).

--- a/.cproject
+++ b/.cproject
@@ -30,6 +30,7 @@
 									<listOptionValue builtIn="false" value="expat"/>
 									<listOptionValue builtIn="false" value="rt"/>
 								</option>
+								<option id="gnu.cpp.compiler.option.debugging.prof.1849269997" superClass="gnu.cpp.compiler.option.debugging.prof" value="false" valueType="boolean"/>
 								<inputType id="cdt.managedbuild.tool.gnu.cpp.compiler.input.1893069178" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.input"/>
 							</tool>
 							<tool id="cdt.managedbuild.tool.gnu.c.compiler.exe.debug.1729128452" name="GCC C Compiler" superClass="cdt.managedbuild.tool.gnu.c.compiler.exe.debug">
