--- a/Release/makefile
+++ b/Release/makefile
@@ -38,19 +38,19 @@ endif
 # Add inputs and outputs from these tool invocations to the build variables 
 
 # All Target
-all: openmoc
+all: OpenMOC
 
 # Tool invocations
-openmoc: $(OBJS) $(USER_OBJS)
+OpenMOC: $(OBJS) $(USER_OBJS)
 	@echo 'Building target: $@'
 	@echo 'Invoking: GCC C++ Linker'
-	g++ -p -pg -o "openmoc" $(OBJS) $(USER_OBJS) $(LIBS)
+	g++  -o "OpenMOC" $(OBJS) $(USER_OBJS) $(LIBS)
 	@echo 'Finished building target: $@'
 	@echo ' '
 
 # Other Targets
 clean:
-	-$(RM) $(OBJS)$(C++_DEPS)$(C_DEPS)$(CC_DEPS)$(CPP_DEPS)$(EXECUTABLES)$(CXX_DEPS)$(C_UPPER_DEPS) openmoc
+	-$(RM) $(OBJS)$(C++_DEPS)$(C_DEPS)$(CC_DEPS)$(CPP_DEPS)$(EXECUTABLES)$(CXX_DEPS)$(C_UPPER_DEPS) OpenMOC
 	-@echo ' '
 
 .PHONY: all clean dependents
